Fix unnecessary scrollbars caused by absolutely positioned elements

--- a/src/client/flogo/flow/flow.component.less
+++ b/src/client/flogo/flow/flow.component.less
@@ -17,6 +17,7 @@
   flex-direction: column;
   width: 100%;
   max-width: 100%;
+  overflow: hidden;
 }
 
 .diagram-container {
